Update exercises for Java 8, add language selector/intros, and refresh README